# maui-software

./: .buildinfo  .gitattributes  .gitignore  =  =3  =7.6  CONTRIBUTING.md  LICENSE  README.md  README.rst  example_gallery.html  files_metadata.html  genindex.html  index.html  maui.acoustic_indices.html  maui.eda.html  maui.html  maui.io.html  maui.samples.html  maui.utils.html  maui.visualizations.html  maui_test.ipynb  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test_seq.pkl  teste.pkl
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: auto-assign.yml  cleanup_rst.py  documentation.yml  main_pr_from_dev.yml  publish-to-pypi.yml  publish_pypi.yml  tests.yml
.ipynb_checkpoints/: maui_test-checkpoint.ipynb
_modules/: index.html
_modules/maui/acoustic_indices/: acoustic_indices.html
_modules/maui/eda/: eda.html
_modules/maui/files_metadata/: files_metadata.html
_modules/maui/io/: io.html
_modules/maui/samples/: audio_samples.html
_modules/maui/utils/: utils.html
_modules/maui/visualizations/: visualizations.html
_sources/: example_gallery.rst.txt  files_metadata.rst.txt  index.rst.txt  maui.acoustic_indices.rst.txt  maui.eda.rst.txt  maui.io.rst.txt  maui.rst.txt  maui.samples.rst.txt  maui.utils.rst.txt
docs/: Makefile  requirements.txt
docs/source/: conf.py  files_metadata.rst  index.rst  maui.visualizations.rst
maui/: __init__.py  acoustic_indices.py  eda.py  io.py  visualizations.py
maui/acoustic_indices/: __init__.py  acoustic_indices.py
maui/eda/: __init__.py  eda.py
maui/eda/.ipynb_checkpoints/: eda-checkpoint.py
maui/files_metadata/: __init__.py  files_formats.yaml  files_metadata.py
maui/io/: __init__.py  io.py
maui/samples/: __init__.py  audio_samples.py
maui/utils/: __init__.py  utils.py
maui/visualizations/: __init__.py  visualizations.py
tests/: test_acoustic_indices.py  test_audio_samples.py  test_eda.py  test_files__metadata.py  test_io.py  test_utils.py  test_visualizations.py
