[tool.poetry]
name = "maui-software"
version = "0.1.24"
description = "Eco-acoustics data visualization and analysis"
authors = ["Caio Ferreira Bernardo <caio.bernardo@usp.br>"]
readme = "README.md"

packages = [
    { include = "maui" }
]


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-maad = "^1.3.0"
plotly = "^5.16.1"
tqdm = "^4.66.1"
fpdf = "^1.7.2"
audioread = "^3.0.0"
pandas = "^2.0.0"
numpy = "< 2.0.0"
kaleido = "0.2.1"
pyyaml = "^6.0.1"
matplotlib = "^3.8.3"
gdown = "^5.2.0"
pydub = "^0.25.1"
objgraph = "^3.6.1"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
pylint = "^3.1.0"
black = "^24.3.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^2.0.0"
numpydoc = "^1.7.0"
ghp-import = "^2.1.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
